--- a/assets/css/product_detail.css
+++ b/assets/css/product_detail.css
@@ -1,37 +1,44 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 .breadcrumb {
     display: flex;
     list-style: none;
     padding: 25px 0;
     margin: 0;
     font-size: 18px;
-    
+
 
 }
+
 .breadcrumb li {
     display: flex;
     align-items: center;
 }
-.breadcrumb li + li::before {
+
+.breadcrumb li+li::before {
     content: '›';
     margin: 0 8px;
     color: #333;
 }
+
 .breadcrumb a {
     text-decoration: none;
     color: #007bff;
 }
+
 .breadcrumb a:hover {
     text-decoration: underline;
 }
+
 .rating {
     color: #ffc107;
     margin-left: 8px;
 }
+
 .product-detail h2 {
     font-size: 28px;
     font-weight: bold;
@@ -63,10 +70,12 @@
     display: flex;
     flex: 1;
 }
+
 .button-group {
-    padding-bottom:10px ;
+    padding-bottom: 10px;
     display: flex;
-    gap: 15px; /* Tạo khoảng cách giữa các nút */
+    gap: 15px;
+    /* Tạo khoảng cách giữa các nút */
 }
 
 .btn {
@@ -74,37 +83,46 @@
     font-size: 16px;
     border: none;
     cursor: pointer;
-    border-radius: 5px; /* Bo góc nút */
+    border-radius: 5px;
+    /* Bo góc nút */
     font-weight: bold;
 }
 
 .add-to-cart {
-    background-color: #f1f1f1; /* Màu nền xám nhạt */
-    color: #333; /* Màu chữ xám đậm */
+    background-color: #f1f1f1;
+    /* Màu nền xám nhạt */
+    color: #333;
+    /* Màu chữ xám đậm */
 }
 
 .add-to-cart:hover {
-    background-color: #e0e0e0; /* Đổi màu khi hover */
+    background-color: #e0e0e0;
+    /* Đổi màu khi hover */
 }
 
 .buy-now {
-    background-color: #ed1c24; /* Màu đỏ tươi */
-    color: #fff; /* Màu chữ trắng */
+    background-color: #ed1c24;
+    /* Màu đỏ tươi */
+    color: #fff;
+    /* Màu chữ trắng */
 }
 
 .buy-now:hover {
-    background-color: #d0001b; /* Đổi màu khi hover */
+    background-color: #d0001b;
+    /* Đổi màu khi hover */
 }
 
 .button-group .btn {
     flex: 1;
     padding: 10px;
 }
-.input-group .btn-light{
+
+.input-group .btn-light {
     background-color: orange;
 }
-.price_single{
-    background-color: white ;
+
+.price_single {
+    background-color: white;
     float: left;
     width: 100%;
     font-size: 18px;
@@ -112,7 +130,8 @@
     margin-bottom: 10px;
     padding-top: 15px;
 }
-.text-danger{
+
+.text-danger {
     float: left;
     margin-bottom: 6px;
     font-size: 25px;
@@ -120,22 +139,26 @@
     margin-right: 5px;
     min-height: 20px;
 }
-.text-danger .currency{
+
+.text-danger .currency {
     font-size: 15px;
     color: #ed1c24;
 }
-.box_khuyen_mai{
+
+.box_khuyen_mai {
     width: 100%;
     float: left;
     padding: 10px 15px 0px;
     border-bottom: dashed 1px black;
     border-left: dashed 1px black;
-    border-right: dashed 1px black; 
+    border-right: dashed 1px black;
 }
+
 .box_khuyen_mai p {
     color: black;
 }
-.box_uu_diem{
+
+.box_uu_diem {
     width: 100%;
     float: left;
     background: #34a105;
@@ -144,24 +167,7 @@
     padding: 5px 15px;
     border-bottom: dashed 1px #d7d7d7;
 }
-.fs-thumit {
-    display: flex;
-    text-align: center;
-    margin: 0 auto;
-}
-.video_youtube {
-    font-size: 20px;
-    padding-right: 50px;
-}
-.image-gallery_full {
-    padding-right: 50px;
-}
-.fs-th5 i{
-    font-size: 20px;
-}
-.fs-th5 p{
-    font-size: 20px;
-}
+
 .tab-container {
     margin: 20px 0;
 }
@@ -194,4 +200,26 @@
 .tab-content {
     text-align: center;
     padding: 15px 0;
+}
+
+/* Kiểu cho ảnh nhỏ */
+.thumb-img {
+    width: 100px;
+    height: 100px;
+    cursor: pointer;
+    object-fit: cover;
+}
+
+/* Kiểu cho ảnh lớn */
+.main-img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
+
+/* Đảm bảo ảnh nhỏ hiển thị chính xác khi hover */
+.thumbnail-container {
+    display: flex;
+    gap: 10px;
+    margin-top: 20px;
 }
