--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    /*font-family: ;*/
+    font-family: Arial, sans-serif;
 }
 body {
     background-color: white;
@@ -10,6 +10,10 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
+}
+p {
+    text-weight: normal;
+    margin-bottom: 20px;
 }
 .login-container {
     width: 800px;
@@ -64,7 +68,7 @@ body {
 }
 
 .form-control:focus {
-    border-bottom: 1px solid #FFDD00;
+    border-bottom: 1px solid #fd0;
 }
 .form-control:focus::placeholder {
     color: transparent;
@@ -75,17 +79,19 @@ body {
 }
 
 .field input {
-    color: #FFDD00;
+    color: #fd0;
     background: none;
     padding: 0.625rem;
+    margin-bottom: 30px;
 }
 
 .field label {
     position: absolute;
+    font-size: 14px;
     top: 0;
     left: 0;
     translate: 0.625rem 0.625rem;
-    color: #FFDD00;
+    color: #fd0;
     padding-inline-start: 0.25rem;
     pointer-events: none;
     transition: translate 250ms;
@@ -103,7 +109,7 @@ label {
 }
 
 .btn-login {
-    background-color: #FFDD00;
+    background-color: #fd0;
     color: black;
     padding: 10px;
     width: 100%;
@@ -113,10 +119,10 @@ label {
     font-size: 1rem;
 }
 .btn-login:hover {
-    background-color: #FFDD00;
+    background-color: #fd0;
 }
 .text-link {
-    color: #ffde00;
+    color: #fd0;
     text-decoration: none;
 }
 .text-link:hover {
