--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -3,6 +3,7 @@ body {
 }
 .cart-container {
     margin-top: 20px;
+    padding: 0 15px;
 }
 .order-container {
     padding: 20px;
@@ -30,26 +31,27 @@ body {
 }
 .product {
     display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
     width: 100%;
-    height: 180px;
+    height: auto;
 }
 .product img {
     object-fit: cover;
-    max-width: 180px;
+    width: 20%;
     height: 100%;
+    margin-right: 10px;
 }
 .product-information {
-    margin-left: 20px;
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
 }
 .product-detail {
-    width: 70%;
+
+    width: 50%;
     line-height: 1.5rem;
 }
 .product-name {
-    font-size: 24px;
+    font-size: 1.2rem;
     font-weight: bold;
 }
 .product-price {
@@ -71,11 +73,12 @@ body {
 }
 .quantity-container {
     display: flex;
+    flex-wrap: nowrap;
     align-items: center;
 }
 .quantity-button {
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     margin-top: 10px;
     border: 1px solid #ddd;
     display: flex;
@@ -99,7 +102,9 @@ body {
 .product-detail2 {
     width: 30%;
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
+    text-align: right;
     align-items: end;
 }
 .product-detail2 .product-price {
