--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -46,7 +46,6 @@ body {
     display: flex;
 }
 .product-detail {
-
     width: 50%;
     line-height: 1.5rem;
 }
@@ -188,9 +187,47 @@ body {
     background-color: #fd0;
     border: none;
 }
-
+.product-slide {
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
+}
+.product-img-slide {
+    width: 30%;
+    height: 100px;
+}
+.product-img-slide {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+.product-detail-slide {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+}
+.product-name-slide {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+.product-price-slide {
+    font-size: 1rem;
+    color: #fd0;
+    margin-bottom: 10px;
+}
 .button-add {
-    background-color: red;
+    width: 100px;
+    height: 40px;
+    background-color: #fd0;
+    font-weight: bold;
+    border: none;
+    border-radius: 0;
+    cursor: pointer;
+}
+.button-add:hover {
+    background-color: black;
+    color: white;
 }
 
 /*index page style by Nguyen Phy Long*/
