--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -68,7 +68,6 @@ body {
     height: 40px;
     margin-top: 10px;
     border: 1px solid #ddd;
-    background-color: white;
 }
 .quantity-container {
     display: flex;
@@ -228,6 +227,10 @@ body {
 .button-add:hover {
     background-color: black;
     color: white;
+}
+
+.checkout-container {
+
 }
 
 /*index page style by Nguyen Phy Long*/
