--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -181,7 +181,7 @@ body {
 .payment-button {
     font-size: 22px;
     font-weight: bold;
-    width: 340px;
+    width: 100%;
     height: 80px;
     background-color: #fd0;
     border: none;
@@ -229,8 +229,43 @@ body {
     color: white;
 }
 
-.checkout-container {
 
+/*checkout*/
+.checkout-container {
+    font-size: 1.2rem;
+    padding: 0 15px;
+}
+.checkout-container h5 {
+    font-weight: bold;
+    padding: 10px;
+    background-color: #F1F1F1;
+}
+.checkout-payment-container {
+    padding: 20px;
+    background-color: #F1F1F1;
+    width: 100%;
+}
+.checkout-product {
+    display: flex;
+    margin: 10px;
+    color: #808080;
+}
+.checkout-product .product-detail {
+    display: flex;
+    width: 50%;
+    text-align: left;
+    flex-direction: column;
+}
+.checkout-product .product-detail2 {
+    display: flex;
+    width: 50%;
+    text-align: right;
+}
+.shipment-method {
+    padding: 20px;
+}
+.payment-method {
+    padding: 20px;
 }
 
 /*index page style by Nguyen Phy Long*/
