--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -2,17 +2,14 @@ body {
     background-color: #f8f9fa;
 }
 .cart-container {
-    margin-top: 20px;
-    padding: 0 15px;
+
 }
 .order-container {
-    padding: 20px;
     background-color: #F1F1F1;
-    width: 380px;
+    max-width: 380px;
 }
 .cart-container h5 {
     font-weight: bold;
-    padding: 10px;
     background-color: #F1F1F1;
 }
 .order-container h5 {
@@ -37,13 +34,33 @@ body {
     height: auto;
 }
 .product img {
-    object-fit: contain;
+    object-fit: cover;
     width: 20%;
+    aspect-ratio: 3/2;
     height: 100%;
-    margin-right: 10px;
 }
 .product-information {
     display: flex;
+    width: 100%;
+}
+@media (max-width: 768px) {
+    .product {
+        word-wrap: break-word;
+    }
+    .product-information {
+        flex-direction: column;
+    }
+    .product-detail {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .product-detail2 {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+    }
 }
 .product-detail {
     width: 50%;
@@ -189,21 +206,19 @@ body {
 .product-slide {
     display: flex;
     justify-content: space-between;
+    width: 50%;
     height: 100%;
 }
 .product-img-slide {
-    width: 30%;
-    height: 100px;
-}
-.product-img-slide {
-    width: 100%;
-    height: auto;
     object-fit: cover;
+    width: 30%;
+    height: 100%;
 }
 .product-detail-slide {
     display: flex;
     flex-direction: column;
-    width: 60%;
+    width: 70%;
+    align-content: center;
 }
 .product-name-slide {
     font-size: 1.2rem;
@@ -216,8 +231,9 @@ body {
     margin-bottom: 10px;
 }
 .button-add {
-    width: 100px;
-    height: 40px;
+    font-size: 0.8rem;
+    width: 6rem;
+    height: 2.5rem;
     background-color: #fd0;
     font-weight: bold;
     border: none;
@@ -228,7 +244,6 @@ body {
     background-color: black;
     color: white;
 }
-
 
 /*checkout*/
 .checkout-container {
